Add missing newline

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -71,9 +71,10 @@ Configure Taqueria alternatively by using the following environment variables:
 - TAQ_ARCHETYPE_IMAGE
 
 For instance, to use LIGO v0.60 when compiling, do the following:
-```
+
+```shell
 export TAQ_LIGO_IMAGE="ligolang/ligo:0.60"
-taq compile hello-tacos.mligo
+taq compile 'hello-tacos.mligo'
 ```
 
 #### NEW Sandbox Baking Options
