--- a/website/docs/getting-started/quickstart.mdx
+++ b/website/docs/getting-started/quickstart.mdx
@@ -1,6 +1,8 @@
 ---
 title: Quickstart
 ---
+import NodeRequirement from "@site/src/components/Helpers/NodeRequirement"
+
 <!-- 
 Content Type: Getting Started Documentation
 
@@ -32,7 +34,7 @@ What you will accomplish:
 To successfully follow this guide, you must ensure that:
 - The Taqueria CLI has been [installed](./installation.mdx) and is available in your `$PATH` 
 - Docker v20.10.12 (or later) is installed and currently running
-- Node.js v16.17.1 (or later) is installed
+- <NodeRequirement download/>
 
 :::note
 The Taqueria VS Code Extension provides direct access to Taqueria tasks. Under the hood, the VS Code Extension makes calls to the CLI, so you can be assured the behaviour of tasks will remain consistent regardless of whether they are executed from a terminal or the command palette. The steps in this guide are for using the Taqueria CLI, but you can also run the commands from the Taqueria extension via the VS Code command palette if you prefer
