--- a/website/docs/plugins/plugin-jest.mdx
+++ b/website/docs/plugins/plugin-jest.mdx
@@ -2,6 +2,8 @@
 title: '@taqueria/plugin-jest'
 ---
 
+import NodeRequirement from "@site/src/components/Helpers/NodeRequirement"
+
 ## Jest Plugin 
 
 The `@taqueria/plugin-jest` plugin provides the `taq test` task which provides a means to initialize Jest test directories and run Jest tests
@@ -9,7 +11,7 @@ The `@taqueria/plugin-jest` plugin provides the `taq test` task which provides a
 ## Requirements
 
 - Taqueria v0.26.0 or later
-- Node.js v16.17.1 or later
+- <NodeRequirement/>
 
 ### Installation
 
