--- a/website/docs/scaffolds/nft-scaffold.mdx
+++ b/website/docs/scaffolds/nft-scaffold.mdx
@@ -2,6 +2,8 @@
 title: The NFT Scaffold Project
 ---
 
+import NodeRequirement from "@site/src/components/Helpers/NodeRequirement"
+
 | Scaffold Details                                                             |
 |--------------------|---------------------------------------------------------|
 | Complexity         | Advanced                                                |
@@ -42,7 +44,7 @@ This would be a good beginning point for an artist who wants to sell unique artp
 
 - Taqueria v0.26.0 or later
 - Docker v20.10.12 or later
-- Node.js v16.17.1 or later
+- <NodeRequirement/>
 - Temple Wallet (can be found [here](https://templewallet.com/))
 
 ## Using the Project
