--- a/website/docs/scaffolds/quickstart.mdx
+++ b/website/docs/scaffolds/quickstart.mdx
@@ -2,6 +2,8 @@
 title: The Quickstart Project
 ---
 
+import NodeRequirement from "@site/src/components/Helpers/NodeRequirement"
+
 | Scaffold Details                                                               |
 |--------------------|-----------------------------------------------------------|
 | Complexity         | Intermediate                                              |
@@ -45,7 +47,7 @@ This tutorial will walk you through the process of scaffolding the `taqueria-sca
 To successfully follow this tutorial, you must ensure that:
 - The Taqueria CLI binary has been [installed](../getting-started/installation.mdx) locally and is available in your terminal `$PATH` 
 - [Docker Desktop](https://www.docker.com/get-started/) is installed and registered in your terminal, and that the Docker daemon is currently running
-- You are using [Node.js v16](https://nodejs.org/en/download/) or later
+- You are using <NodeRequirement download/>
 
 :::caution
 Currently the Taqueria VS Code Extension does not support the scaffold command. For best results, run the commands in this tutorial from the CLI
