--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -2,6 +2,8 @@
 title: Taco Shop
 ---
 
+import NodeRequirement from "@site/src/components/Helpers/NodeRequirement"
+
 | Scaffold Details                                                             |
 |--------------------|---------------------------------------------------------|
 | Complexity         | Beginner                                                |
@@ -49,7 +51,7 @@ The project comes pre-configured with the following:
 
 - Taqueria v0.26.0 or later
 - Docker v20.10.12 or later
-- Node.js v16.17.1 or later
+- <NodeRequirement/>
 - Temple Wallet (can be found [here](https://templewallet.com/))
 
 
