Started added missing docs

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -134,7 +134,7 @@ Taqueria has better facilities to deploy and interact with Contracts on mainnet
 
 #### Improved diagnostics, error messages, and error handling
 
-General improvements throughout, including version compatibility checking for core components such as as docker, deno and NodeJS.
+General improvements throughout, including version compatibility checking for core components such as as docker, deno and Node.js.
 
 #### Improved Entity Model
 
