--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,17 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.28.2
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Feb 16, 2023  |
+|Release Type | Minor         |
+|Release Page | [v0.28.2](https://github.com/ecadlabs/taqueria/releases/tag/v0.28.2) |
+
+### Summary
+
+- CLI column width is dynamic. Help output will not be wrapped if your terminal width can accommodate longer lines of text.
+
 ## Taqueria v0.28.0
 | Details     |               |
 | ----------- | ------------- |
