--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,67 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.28.3
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Feb 16, 2023  |
+|Release Type | Minor         |
+|Release Page | [v0.28.2](https://github.com/ecadlabs/taqueria/releases/tag/v0.28.3) |
+
+### Summary
+
+- Coming soon.
+
+### Pull Requests
+
+This is the most *comprehensive* list of changes since the last release, and provides detailed, per-change information.
+
+* 🛠️ Fix ➾ Closes #1711, update tests to assert that contextual help is working by @mweichert in #1830
+* 🧽 Chore ➾ Ability to install plugins with specific version in TVsCE by @AlirezaHaghshenas in #1827
+* 🧽 Chore ➾ Group Contracts and Artifacts in TreeViews by @AlirezaHaghshenas in #1825
+* 🛠️ Fix ➾ Contextual help test by @michaelkernaghan in #1833
+* 🛠️ Fix ➾ Add better error handling to withTaq binary by @mweichert in #1831
+* 🛠️ Fix ➾ Doc changes by @mweichert in #1837
+* 🧽 Chore ➾ Update flextesa docs by @mweichert in #1839
+* 🛠️ Fix ➾ Added docs for all missing docs except 'generate-project-metadata' and 'pin' by @mweichert in #1840
+* 🛠️ Fix ➾  Closes #1775, ensures that protocol package can be consumed by nodejs, deno, and browsers by @mweichert in #1836
+* 🛠️ Fix ➾ #1750, uninstall plugin emits error by @mweichert in #1821
+* 🛠️ Fix ➾ Dynamically set the column wrapping of the yargs help menu by @mweichert in #1842
+* 🧪 Pre-Release ➾ v0.28.1 (and VSCode v0.29.0) by @mweichert in #1841
+
+** Full Changelog: https://github.com/ecadlabs/taqueria/compare/v0.28.2...0.28.3
+
+## Taqueria v0.28.2
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Feb 16, 2023  |
+|Release Type | Minor         |
+|Release Page | [v0.28.2](https://github.com/ecadlabs/taqueria/releases/tag/v0.28.2) |
+
+### Summary
+
+- CLI column width is dynamic. Help output will not be wrapped if your terminal width can accommodate longer lines of text.
+
+### Pull Requests
+
+This is the most *comprehensive* list of changes since the last release, and provides detailed, per-change information.
+
+* 🛠️ Fix ➾ Closes #1711, update tests to assert that contextual help is working by @mweichert in #1830
+* 🧽 Chore ➾ Ability to install plugins with specific version in TVsCE by @AlirezaHaghshenas in #1827
+* 🧽 Chore ➾ Group Contracts and Artifacts in TreeViews by @AlirezaHaghshenas in #1825
+* 🛠️ Fix ➾ Contextual help test by @michaelkernaghan in #1833
+* 🛠️ Fix ➾ Add better error handling to withTaq binary by @mweichert in #1831
+* 🛠️ Fix ➾ Doc changes by @mweichert in #1837
+* 🧽 Chore ➾ Update flextesa docs by @mweichert in #1839
+* 🛠️ Fix ➾ Added docs for all missing docs except 'generate-project-metadata' and 'pin' by @mweichert in #1840
+* 🛠️ Fix ➾  Closes #1775, ensures that protocol package can be consumed by nodejs, deno, and browsers by @mweichert in #1836
+* 🛠️ Fix ➾ #1750, uninstall plugin emits error by @mweichert in #1821
+* 🛠️ Fix ➾ Dynamically set the column wrapping of the yargs help menu by @mweichert in #1842
+* 🧪 Pre-Release ➾ v0.28.1 (and VSCode v0.29.0) by @mweichert in #1841
+
+** Full Changelog: https://github.com/ecadlabs/taqueria/compare/v0.28.0...v0.28.2
+
+
 ## Taqueria v0.28.2
 | Details     |               |
 | ----------- | ------------- |
