--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,18 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.28.4
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | Mar 9, 2023  |
+|Release Type | Minor         |
+|Release Page | [v0.28.4](https://github.com/ecadlabs/taqueria/releases/tag/v0.28.4) |
+
+### Summary
+
+#### LIGO plugin
+- The `taq ligo` invokes the ligo CLI using docker with user and group settings that work in WSLv2 environments
+
 ## Taqueria v0.28.3
 | Details     |               |
 | ----------- | ------------- |
