--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -14,6 +14,8 @@ title: Taqueria Releases
 #### LIGO plugin
 - The `taq ligo` invokes the ligo CLI using docker with user and group settings that work in WSLv2 environments
 
+** Full Changelog: https://github.com/ecadlabs/taqueria/compare/v0.28.3...0.28.4
+
 ## Taqueria v0.28.3
 | Details     |               |
 | ----------- | ------------- |
