Update release notes on website for v0.28.6

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -2,6 +2,27 @@
 title: Taqueria Releases
 ---
 
+## Taqueria v0.28.6
+| Details     |               |
+| ----------- | ------------- |
+|Release Date | May 2, 2023  |
+|Release Type | Minor         |
+|Release Page | [v0.28.6](https://github.com/ecadlabs/taqueria/releases/tag/v0.28.6) |
+
+### Summary
+
+This release brings Mumbai compatibility to the LIGO and Flextesa plugins. The Tezos Client, SmartPy, and Archetype plugins are being worked on.
+
+#### Ligo plugin
+- Supports LIGO v0.65, the Mumbai protocol, and the '@entry' notation
+- Contracts generated using LIGO templates/packages are no longer owned by root
+- `compile-all` task works as expected
+
+##### Flextesa plugin
+- Supports the Mumbai protocol
+
+** Full Changelog: https://github.com/ecadlabs/taqueria/compare/v0.28.4...0.28.6
+
 ## Taqueria v0.28.4
 | Details     |               |
 | ----------- | ------------- |
