--- a/website/docs/taqueria-dev/contributions.mdx
+++ b/website/docs/taqueria-dev/contributions.mdx
@@ -4,15 +4,15 @@ title: Contribute to Taqueria
 
 The Taqueria source code repository is hosted on Github. This public repository is used to collaborate on all Taqueria work, including monitoring development progress, bug tracking, enhancement tracking and discussions:
 
-- Repository: https://github.com/ecadlabs/taqueria
-- Issues (Bugs, features and development tracking): https://github.com/ecadlabs/taqueria/issues
-- Discussions: https://github.com/ecadlabs/taqueria/discussions 
+- Repository: https://github.com/pinnacle-labs/taqueria
+- Issues (Bugs, features and development tracking): https://github.com/pinnacle-labs/taqueria/issues
+- Discussions: https://github.com/pinnacle-labs/taqueria/discussions 
 
 As Taqueria is an open-source project, we believe it is essential for this work to be publicly visible.
 
 # Contributions
 
-Please use the [GitHub issue tracker](https://github.com/ecadlabs/taqueria/issues) to report bugs or request features
+Please use the [GitHub issue tracker](https://github.com/pinnacle-labs/taqueria/issues) to report bugs or request features
 
 To contribute, please check the issue tracker to see if an existing issue exists for your planned contribution. If there's no issue, please create one first, and then submit a pull request with your contribution
 
@@ -80,7 +80,7 @@ representative at an online or offline event.
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the community leaders responsible for enforcement by email at
-[abuse@ecadlabs.com](mailto:abuse@ecadlabs.com) or by contacting administrators and moderators 
+[abuse@pinnaclelabs.limited](mailto:abuse@pinnaclelabs.limited) or by contacting administrators and moderators 
 in official community channels.
 All complaints will be reviewed and investigated promptly and fairly.
 
